Fix text content jumping on Firefox: Change footer width from 100vw to 100% to prevent layout shifts caused by scrollbar width variations

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -3,7 +3,7 @@
   background-color: rgb(16, 23, 29);
   color: #dfdfdf;
   position: fixed;
-  width: 100vw;
+  width: 100%;
   bottom: 0;
   z-index: 1000;
 
